--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/styles/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/styles/styles.css">
-    <title>OptimusTech</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OptimusTech</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="src/styles/styles.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a href="#"><img src="src/icone/worldwide.svg" alt="Icone do WorldWide"></a>
-            <ul class="lista-menu">
-                <li class="lista-menu__item">
-                    <a class="lista-menu__link" href="#">Home</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a class="lista-menu__link" href="#">Produtos</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a class="lista-menu__link" href="#">Recursos</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a class="lista-menu__link" href="#">Sobre nós</a>
-                </li>
-            </ul>
-            <div class="menu__botao">
-                <a class="botao__link" href="#">Entrar</a>
-                <a class="botao__link__cadastrar" href="#">Cadastrar</a>
-            </div>
-        </nav>
-    </header>
+  <nav>
+    <img src="src/icone/worldwide.svg"/>
+    <div class="links">
+      <a href="#">Home</a>
+      <a href="#">Produtos</a>
+      <a href="#">Recursos</a>
+      <a href="#">Sobre nós</a>
+    </div>
+    <div class="buttons">
+      <button>Entrar</button>
+      <button id="signUp">Cadastrar</button>
+    </div>
+  </nav>
+  <section class="cabecalho">
+    <span class="cabecalho__sobre">Sobre nós</span>
+    <h1 class="cabecalho__titulo">Por que somos diferentes?</h1>
+    <p class="cabecalho__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+  </section>
 </body>
 </html>
