--- a/index.html
+++ b/index.html
@@ -24,10 +24,32 @@
       <button id="signUp">Cadastrar</button>
     </div>
   </nav>
-  <section class="cabecalho">
+  <header class="cabecalho">
     <span class="cabecalho__sobre">Sobre nós</span>
     <h1 class="cabecalho__titulo">Por que somos diferentes?</h1>
     <p class="cabecalho__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+  </header>
+  <section class="metricas-container">
+    <div>
+      <p class="metricas-container__numeros">400+</p>
+      <h2 class="metricas-container__titulo">Projetos concluídos</h2>
+      <p class="metricas-container__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+    </div>
+    <div>
+      <p class="metricas-container__numeros">100+</p>
+      <h2 class="metricas-container__titulo">Colaboradores</h2>
+      <p class="metricas-container__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+    </div>
+    <div>
+      <p class="metricas-container__numeros">20k</p>
+      <h2 class="metricas-container__titulo">Downloads</h2>
+      <p class="metricas-container__texto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+    </div>
+    <div>
+      <p class="metricas-container__numeros">500+</p>
+      <h2 class="metricas-container__titulo">Reviews 5 estrelas</h2>
+      <p class="metricas-container__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+    </div>
   </section>
 </body>
 </html>
